# downward_target_tracker

./: CMakeLists.txt  JETSON.md  PLANNING.md  README.md  README_example_calibration.md  README_linecounter.md  asc_connected_components.h  asc_profiler.h  asc_readlog.h  asc_tracker.cpp  asc_tracker.h  asc_tracker_odroid.cpp  asc_tracker_pc.cpp  asc_usbcam.h  calibration.txt  get_nanoseconds.h  im_equidistant.h  main_debugger.cpp  main_drone.cpp  main_test.cpp  package.xml  poses_3aug_2.txt  set_camera_controls.sh  so_math.h  test_line_counter.cpp  vdb_release.h  view_color.cpp  view_rectify.cpp  view_tracks.cpp
matlab_test/: image_tracking.m  log_x_y_0.txt  log_x_y_1.txt  log_x_y_2.txt  log_x_y_4.txt  log_x_y_5.txt  log_x_y_6.txt  log_x_y_7.txt  m_distance.m  m_trace.m
msg/: calibration.msg  image.msg  info.msg  tracks.msg
src/: asc_detector.h  asc_grid_detector.h  asc_tracker.h  asc_usbcam.h  camera_define.h  line_counter_filter.cpp  main_debugger.cpp  main_drone.cpp  main_line_counter.cpp  main_test.cpp  mjpg_to_jpg.h  mock_jpg.h  my_parameters.h  parameters.h  so_math.h  test_line_counter.cpp  view_color.cpp  view_line_counter.cpp  view_rectify.cpp  view_threshold.cpp  view_tracks.cpp
src/vdb/: vdb.h  vdb_imgui_draw.h
src/vdb/lib/: so_platform_sdl.h  source_sans_pro.h
